# chimaera.lv2

./: .gitmodules  CMakeLists.txt  chimaera.c  chimaera.h  chimaera.ttl  chimaera_ui.c  chimaera_ui.edc  comm.c  comm_ui.c  control_out.c  driver.c  dummy_in.c  dump_in.c  event_in.c  filter.c  injector.c  manifest.ttl.in  mapper.c  midi_out.c  mogrifier.c  mpe_out.c  osc_in.c  osc_out.c  simulator.c  simulator_ui.c  simulator_ui.edc  supercollider_out.c  tuio2_in.c  visualizer.c  visualizer_ui.c  visualizer_ui.edc
osc.lv2/: lv2_osc.h
